compiler/tools/fpp-check/test/state_machine_instance/outside_passive.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine_instance/outside_passive.fpp:5.3
  state machine instance s1: S
  ^
error: passive component may not have a state machine instance
